progress container fix text color contrast

--- a/style/_progress.scss
+++ b/style/_progress.scss
@@ -34,7 +34,8 @@
             }
 
             span {
-                color: $dark-gray;
+                // color: $dark-gray;
+                color: #595959;
             }
         }
     }
